--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, viewport-fit=cover" />
     <title>Điểm danh Thiếu Nhi</title>
     <link rel="manifest" href="/diemdanh/manifest.json">
+    <link rel="icon" type="image/x-icon" href="/diemdanh/images/logo.jpg">
 
     <!-- Google Font Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
